--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio Website</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 </head>
 <body>
     <!-- Home -->
@@ -15,6 +16,7 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
                 <li><a href="#">Skills</a></li>
             </ul>
             <a href="#" class="btn">Contact Us</a>
@@ -53,7 +55,7 @@
         </div>
         <div class="box">
             <div class="card">
-                <i class="fa-solid fa-bars-staggered"></i>
+                <i class="fa fa-html5"></i>
                 <h5>HTML</h5>
                 <div class="text">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam numquam perspiciatis, labore et nesciunt accusantium adipisci. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, itaque.</p>
@@ -79,10 +81,30 @@
                 </div>
             </div>
         </div>
-
-
-    
     </div>
+
+    <!-- Contact Me -->
+    <div class="contact">
+        <div class="details">
+            <h4>Contact Me</h4>
+            <p>Email: Kupoluyitemitope2004@gmail.com</p>
+            <p>Outlook: Kupoluyi.temitope@outlook.com</p>
+            <p>Phone Number: 09065160387</p>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <footer>
+        <p>Kupoluyi Temitope</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam laboriosam ab eligendi cum, dignissimos beatae.</p>
+        <div class="social">
+            <a href="#">mhhh</a>
+            <a href="#">vhkm</a>
+            <a href="#">nhvu</a>
+        </div>
+        <p class="end">@Kupoluyi Temitope</p>
+    </footer>
+
     
 
 
