Made some final changes

--- a/index.html
+++ b/index.html
@@ -81,14 +81,15 @@
     
     <!-- Footer -->
     <section class="footer">
-        <p>4th Avenue Oluyole Estate Ibadan, Oyo State, Nigeria | Phone: 09065160387 | Email: Kupoluyitemitope2004@gmail.com</p>
-        <p>Social Media: <a href="#"><img src="./images/facebook.jpg" alt="" width="40px" height="40px"></a>  <a href="#"><img src="./images/linkedin.png" alt="" width="40px" height="40px"></a>  <a href="#"><img src="./images/twitter.png" alt="" width="40px" height="40px"></a> </p>
+        <p>Address: 4th Avenue Oluyole Estate Ibadan, Oyo State, Nigeria | Phone: 09065160387 <br> 
+            Email: Kupoluyitemitope2004@gmail.com</p>
+        <p>Social Media: <a href="#"><img src="./images/facebook.jpg" alt="" width="30px" height="20px"></a>  <a href="#"><img src="./images/linkedin.png" alt="" width="30px" height="20px"></a>  <a href="#"><img src="./images/twitter.png" alt="" width="30px" height="20px"></a> </p>
         <p>Copyright @ Website Portfolio</p>
     </section>
 
     <script>
         const menubutton = document.querySelector('.menu-button')
-        const navlinks = document.querySelector('ul')
+        const navlinks = document.querySelector('.nav-links')
 
         menubutton.addEventListener('click',()=>{
             navlinks.classList.toggle('mobile-menu')
