Made some changes to the stylying and responsiveness

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio Website</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/b58f4d5405.js" crossorigin="anonymous"></script>
     
 </head>
 <body>
@@ -67,13 +68,13 @@
                 <img src="./images/adventure 2.png" alt="">
                 <h4>Tours & Travels</h4>
                 <p>Made a fully responsive clone of Tours and Travels landing page. Specialist in local & international flights, visas, tours, hotels & car rentals. </p>
-                <a href="#" class="ctn">Open Link</a>
+                <a href="https://github.com/Temitope-Kupoluyi/Adventure.repo" class="ctn">Open Link</a>
             </div>
             <div class="column">
-                <img src="./images/form (2).png" alt="">
+                <img src="./images/form.png" alt="">
                 <h4>Submission Form</h4>
                 <p>Built a responsive submission form.</p>
-                <a href="#" class="ctn">Open Link</a>
+                <a href="https://github.com/Temitope-Kupoluyi/Form.repo" class="ctn">Open Link</a>
             </div>
         </div>
     </section>
@@ -81,10 +82,9 @@
     
     <!-- Footer -->
     <section class="footer">
-        <p>Address: 4th Avenue Oluyole Estate Ibadan, Oyo State, Nigeria | Phone: 09065160387 <br> 
-            Email: Kupoluyitemitope2004@gmail.com</p>
-        <p>Social Media: <a href="#"><img src="./images/facebook.jpg" alt="" width="30px" height="20px"></a>  <a href="#"><img src="./images/linkedin.png" alt="" width="30px" height="20px"></a>  <a href="#"><img src="./images/twitter.png" alt="" width="30px" height="20px"></a> </p>
-        <p>Copyright @ Website Portfolio</p>
+        <p>Address: 4th Avenue Oluyole Estate Ibadan, Oyo State, Nigeria | Phone: 09065160387 <br> Email: Kupoluyitemitope2004@gmail.com | Social Media: <a href="https://twitter.com/temikups?t=qgBRHSgYSc38nVslVY746g&s=08"><i class="fa-brands fa-square-twitter"></i></a> <a href="#"><i class="fa-brands fa-facebook"></i></a> <a href="https://www.linkedin.com/in/temitope-kupoluyi-078141253"><i class="fa-brands fa-linkedin"></i></a>   
+        </p>
+        <p>Copyright @ 2022 Website Portfolio.</p>
     </section>
 
     <script>
